# PS3EYEDriver

./: .gitignore  CMakeLists.txt  accessors.cpp  frame-test.cxx  internal.hpp  mgr.cpp  mgr.hpp  mode-test.cxx  ps3eye.cpp  ps3eye.h  ps3eye.hpp  queue.cpp  queue.hpp  sdl.cxx  setter.hpp  urb.cpp  urb.hpp
sdl/: CMakeLists.txt  main.cpp
src/: ps3eye.cpp
